# synthetic

./: Makefile  pyproject.toml
synthetic/: func.py
tests/: test_func.py
